# Ardusimple-soft

./: .gitignore  GNSS_RTK_Desktop_App_Plan.md  INSTALL.md  LICENSE  PLA_ACCIO_ARDUSIMPLE.md  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
gnss-rtk-app/: App.tsx  app.json  package-lock.json  package.json
gnss-rtk-app/__tests__/: App.test.tsx  coordinate-systems.test.ts  nmea-parser.test.ts
gnss-rtk-app/android/: settings.gradle
gnss-rtk-app/android/app/: build.gradle
gnss-rtk-app/ios/: Podfile
gnss-rtk-app/ios/GNSSRTKApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
gnss-rtk-app/ios/GNSSRTKApp.xcodeproj/: project.pbxproj
gnss-rtk-app/src/lib/: code-library.ts  cogo.ts  coordinate-systems.ts  dtm.ts  formats.ts  nmea-parser.ts
gnss-rtk-app/src/navigation/: AppNavigator.tsx
gnss-rtk-app/src/screens/: CogoScreen.tsx  CollectScreen.tsx  DeviceScreen.tsx  DtmScreen.tsx  ExportScreen.tsx  LicenseExpiredScreen.tsx  LoginScreen.tsx  MapScreen.tsx  NtripScreen.tsx  OnboardingScreen.tsx  ProjectsScreen.tsx  (+3 more)
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: device.rs  license.rs  mod.rs  ntrip.rs  tcp.rs
src-tauri/src/engine/: mod.rs
src-tauri/src/parser/: nmea.rs
src/lib/: formats.ts  nmea-listener.ts  survey-calc.ts
src/store/: useDeviceStore.ts  useLicenseStore.ts  useMapStore.ts  useSurveyStore.ts
src/styles/: globals.css
web-portal/: .env.example  README.md  package.json  tailwind.config.ts
(+36 files in other folders)
