[package]
name = "gnss-rtk-desktop"
version = "0.1.0"
description = "GNSS RTK Desktop Application"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
serialport = "4"
chrono = { version = "0.4", features = ["serde"] }
